# affordance-data-collection

./: README.md  acquisition.xml
common/include/: helpers.h
common/src/: helpers.cpp
dataset_acquisition/: CMakeLists.txt  dataset_acquisition.thrift
dataset_acquisition/include/: acquisition_module.h  acquisition_thread.h
dataset_acquisition/src/: acquisition_module.cpp  acquisition_thread.cpp  main.cpp
